# clipx

./: LICENSE  README.md  README_zh.md  pyproject.toml  q  requirements.txt  test.py
clipx/: __init__.py  api.py  cli.py  core.py  logging.py  utils.py
clipx/commands/: __init__.py  input.py  mask.py  model.py  output.py  parser.py
clipx/models/: __init__.py  base.py  cascadepsp_test.py
clipx/models/cascadepsp/: __init__.py  download.py  eval_helper.py  main.py  model.py
clipx/models/cascadepsp/models/psp/: extractors.py  pspnet.py
clipx/models/u2net/: __init__.py  download.py  main.py  model.py
